# CoinPurseFour

./: .ruff.toml  app.py  pyproject.toml
.github/: copilot-instructions.md
src/: models.py
src/templates/: home.html
src/templates/static/: base.html  footer.html  header.html
